	   things up on a slow connection).
       15. Defined CURSOR_COLOR_IS_RENDITION_COLOR by default in
	   src/feature.h. This makes the cursor better visible when the cursor
	   color is not defined, and makes the behaviour similar to the
	   default behaviour of Xterm.
       16. BugFix: Str and Esc macros caused a beep on execution.
       17. Updated examples / menus to use new word splitting.

    * Enhancements:
	0. Really busy tabs (even with Xft+anti aliasing) no longer starves
	   anything else!
	1. Reduced memory footprint by roughly 5kb.
	2. Converted all source files to use the standard ts=8 for easier
	   diffing / online viewing.
	3. Added a --focusDelay option to collect focus changes events over an
	   interval. This is mainly to work around a bug in some window
	   managers.
	4. Xft bold fonts now actually use the bold font, instead of over
	   striking.
	5. Added a --xftBoldWeight option to control the weight of the Xft
	   bold font.
	6. Made --holdExit a string option, so that tabs can be held based on
	   the exit status of the child.
	7. Added --holdExitTitle and --holdExitText options to specify the
	   title of an exited tab, and the text printed in the tab of an
	   exited child process.
	8. Removed the "jumpScroll" option, and replaced it with
	   --refreshLimit and --skipPages (see man page).
	9. Changed word splitting of commands executed via NewTab and exec
	   macros. Now words are split only at spaces or tabs (unless
	   backslashed). If command starts with "!", it is passed to /bin/sh
	   -c, which does all the word splitting / executing. For the old
	   behaviour define INERNAL_WORD_SPLIT in src/feature.h.

Jimmy Zhou <jimmyzhou@users.sourceforge.net>
    * Bug Fixes:
	1. Fix mrxvtset.pl as pointed by Avi Yagodnick.
	2. Fix mouse button 4/5 behavior. Make it the same as firefox
	   as pointed out by Yoshihiko Kashio.
	3. Fix reverse video when foreground/background colors are not
	   defined. Thanks to Yoshihiko Kashio.