@@ -36,6 +36,10 @@ Gautam Iyer <gi1242@users.sourceforge.net>
 	   default behaviour of Xterm.
        16. BugFix: Str and Esc macros caused a beep on execution.
        17. Updated examples / menus to use new word splitting.
+       18. When user closes the mrxvt window, don't forcefully exit. Instead
+	   send SIGHUP to all child processes, and wait for childs to exit.
+	   Previous behaviour caused problems if the child produced some
+	   output on SIGHUP, or took a few seconds to exit.
 
     * Enhancements:
 	0. Really busy tabs (even with Xft+anti aliasing) no longer starves
